--- a/CSS/breed.css
+++ b/CSS/breed.css
@@ -30,42 +30,44 @@
   border-radius: 5px;
   text-align: center;
 }
-body {
-  background: url("img/img.png");
-  width: 100%;
-  height: 100%;
-}
 #main {
+  background: url("img/img.png");
+  height: 3000px;;
+}
+.breed {
   float: left;
-  background: #83a0de;
-  margin: 15px;
+  background: #A0DFC6;
+  padding: 1%;
+  margin: 2%;
+  border-radius: 10px;
+  width: 26%;
+  opacity: 80%;
+}
+.i_breed {
+  float: left;
+  background: #93ccb5;
+  padding: 1%;
+  border-radius: 10px;
+  width: 100%;
   font-family: 'Oswald', sans-serif;
-  padding: 50px;
-  border-radius: 30px;
-  opacity: 85%;
 }
-#main img {
-  float: left;
-  border-radius: 3vw;
-  margin-right: 8px;
+.text {
+  font-family: 'Oswald', sans-serif;
 }
-#info {
-  font-weight: bold;
-  font-size: 30px;
+.l_breed {
+  text-decoration: none;
+  color: black;
 }
-
+.l_breed:hover {
+  color: orange;
+  font-size: 20px;
+}
 @media screen and (max-width: 800px) {
   #sitelogo {
     font-size: 20px;
   }
   #head {
     height: 38px;
-  }
-  #main img {
-    width: 50%
-  }
-  #main p {
-    font-size: 20px;
   }
 }
 
@@ -76,12 +78,6 @@ body {
   #head {
     height: 38px;
   }
-  #main img {
-    width: 40%
-  }
-  #main p {
-    font-size: 20px;
-  }
 }
 @media screen and (max-width: 480px) {
   #sitelogo {
@@ -89,11 +85,5 @@ body {
   }
   #head {
     height: 30px;
-  }
-  #main img {
-    width: 50%
-  }
-  #main p {
-    font-size: 15px;
   }
 }
