--- a/CSS/home.css
+++ b/CSS/home.css
@@ -30,42 +30,21 @@
   border-radius: 5px;
   text-align: center;
 }
-body {
+#back {
+  height: 1000px;
   background: url("img/img.png");
-  width: 100%;
-  height: 100%;
 }
-#main {
-  float: left;
-  background: #83a0de;
-  margin: 15px;
-  font-family: 'Oswald', sans-serif;
-  padding: 50px;
-  border-radius: 30px;
-  opacity: 85%;
+#logo {
+  background: url("img/home.png") no-repeat;
+  background-position: center top;
+  height: 480px;
 }
-#main img {
-  float: left;
-  border-radius: 3vw;
-  margin-right: 8px;
-}
-#info {
-  font-weight: bold;
-  font-size: 30px;
-}
-
 @media screen and (max-width: 800px) {
   #sitelogo {
     font-size: 20px;
   }
   #head {
     height: 38px;
-  }
-  #main img {
-    width: 50%
-  }
-  #main p {
-    font-size: 20px;
   }
 }
 
@@ -76,12 +55,6 @@ body {
   #head {
     height: 38px;
   }
-  #main img {
-    width: 40%
-  }
-  #main p {
-    font-size: 20px;
-  }
 }
 @media screen and (max-width: 480px) {
   #sitelogo {
@@ -89,11 +62,5 @@ body {
   }
   #head {
     height: 30px;
-  }
-  #main img {
-    width: 50%
-  }
-  #main p {
-    font-size: 15px;
   }
 }
