--- a/CSS/main.css
+++ b/CSS/main.css
@@ -62,7 +62,7 @@ body {
     height: 38px;
   }
   #main img {
-    width: 50%
+    width: 60%;
   }
   #main p {
     font-size: 20px;
@@ -77,7 +77,7 @@ body {
     height: 38px;
   }
   #main img {
-    width: 40%
+    width: 50%
   }
   #main p {
     font-size: 20px;
@@ -91,7 +91,7 @@ body {
     height: 30px;
   }
   #main img {
-    width: 50%
+    width: 40%
   }
   #main p {
     font-size: 15px;
