--- a/CSS/main.css
+++ b/CSS/main.css
@@ -54,7 +54,9 @@ body {
   font-weight: bold;
   font-size: 30px;
 }
-
+#long {
+  height: 2000px;
+}
 @media screen and (max-width: 800px) {
   #sitelogo {
     font-size: 20px;
