--- a/CSS/breed.css
+++ b/CSS/breed.css
@@ -61,7 +61,7 @@
 }
 .l_breed:hover {
   color: orange;
-  font-size: 20px;
+  font-size: 1.25em;
 }
 @media screen and (min-width: 1000px) {
   #sitelogo {
